--- a/Analytic_biblio.bib
+++ b/Analytic_biblio.bib
@@ -11,6 +11,19 @@ doi  ="10.1039/C3CP52043A",
 url  ="http://dx.doi.org/10.1039/C3CP52043A"
 }
 
+@article{PBE,
+author = {Perdew,John P.  and Ernzerhof,Matthias  and Burke,Kieron },
+title = {Rationale for mixing exact exchange with density functional approximations},
+journal = {The Journal of Chemical Physics},
+volume = {105},
+number = {22},
+pages = {9982-9985},
+year = {1996},
+doi = {10.1063/1.472933},
+URL = { https://doi.org/10.1063/1.472933},
+eprint = { https://doi.org/10.1063/1.472933}
+}
+
 @article {deltaTest2016,
 	author = {Lejaeghere, Kurt and Bihlmayer, Gustav and Bj{\"o}rkman, Torbj{\"o}rn and Blaha, Peter and Bl{\"u}gel, Stefan and Blum, Volker and Caliste, Damien and Castelli, Ivano E. and Clark, Stewart J. 
 	and Dal Corso, Andrea and de Gironcoli, Stefano and Deutsch, Thierry and Dewhurst, John Kay and Di Marco, Igor and Draxl, Claudia and Du{\l}ak, Marcin and Eriksson, Olle and Flores-Livas, Jos{\'e} A. 
@@ -28,8 +41,17 @@ url  ="http://dx.doi.org/10.1039/C3CP52043A"
 	publisher = {American Association for the Advancement of Science},
 	issn = {0036-8075},
 	URL = {http://science.sciencemag.org/content/351/6280/aad3000},
-	eprint = {http://science.sciencemag.org/content/351/6280/aad3000.full.pdf},
 	journal = {Science}
+}
+
+@inbook{casida1995,
+author = {Casida, MARK E.},
+title = {Time-Dependent Density Functional Response Theory for Molecules},
+booktitle = {Recent Advances in Density Functional Methods},
+pages = {155-192},
+doi = {10.1142/9789812830586_0005},
+publisher = {World Scientific},
+year = {1995}
 }
 
 @article{runge1984,
@@ -72,6 +94,22 @@ url = "http://www.sciencedirect.com/science/article/pii/S0301010414000111",
 author = "Bhaarathi Natarajan and Luigi Genovese and Thierry Deutsch and Mark E. Casida"
 }
 
+
+@article{baroni2006,
+  title = {Efficient Approach to Time-Dependent Density-Functional Perturbation Theory for Optical Spectroscopy},
+  author = {Walker, Brent and Saitta, A. Marco and Gebauer, Ralph and Baroni, Stefano},
+  journal = {Phys. Rev. Lett.},
+  volume = {96},
+  issue = {11},
+  pages = {113001},
+  numpages = {4},
+  year = {2006},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.96.113001},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.96.113001}
+}
+
 @article{baroni2008,
 author = {Dario Rocca and Ralph Gebauer and Yousef Saad and Stefano Baroni},
 title = {Turbo charging time-dependent density-functional theory with Lanczos chains},
@@ -82,6 +120,20 @@ pages = {154105},
 year = {2008},
 doi = {10.1063/1.2899649}
 }
+
+@article{linlinKPM,
+author = {Brabec, Jiri and Lin, Lin and Shao, Meiyue and Govind, Niranjan and Yang, Chao and Saad, Yousef and Ng, Esmond G.},
+title = {Efficient Algorithms for Estimating the Absorption Spectrum within Linear Response TDDFT},
+journal = {Journal of Chemical Theory and Computation},
+volume = {11},
+number = {11},
+pages = {5197-5208},
+year = {2015},
+doi = {10.1021/acs.jctc.5b00887},
+URL = {https://doi.org/10.1021/acs.jctc.5b00887},
+eprint = {https://doi.org/10.1021/acs.jctc.5b00887}
+}
+
 
 @article{hubener2014,
   title = {Time-dependent density functional theory using atomic orbitals and the self-consistent Sternheimer equation},
