update plot and biblio

--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -5,6 +5,7 @@
 
 % Useful packages
 \usepackage{graphicx}
+\usepackage{subfig}
 \usepackage{amsmath,amsfonts,amssymb,amsthm}
 \usepackage{mathtools,braket}
 \usepackage{tikz}%,pgfplots}
@@ -378,7 +379,7 @@ response density parametrized as
 Here we have introduced the set of $\omega$-dependent \emph{fluctuation states} $\{\ket{f_p^\Phi(\omega)}\}$, 
 that have values in the \emph{unoccupied} subspace of $\hnot$. 
 An analysis of the Liouville equation \eqref{LiouvillianRhopomegaDef1} for the response density written in this fashion evidences that the equations of motion of fluctuation states are 
-written as a modified Sternheimer equation~\cite{mahan1980}
+written as a modified Sternheimer equation~\cite{mahan1980,giustino2012,giustino2014}
 \be\lb{fluctuationStateEqMotion1}
 \left[\omega - (\hnot-\eps_p)\right]\ket{f_p^\Phi(\omega)} = \op Q_0(\op\Phi(\omega)+\op V'[\dm'_\Phi](\omega))\ket{\psi_p} \;,
 \ee
@@ -428,8 +429,10 @@ they would exhibit bound-state behavior.\footnote{The fulfilling of Eq.~\eqref{S
 is not \textit{per se} a guarantee of a localized $\ket{\psi}$. With such equation we demonstrate that, \emph{in the case when} a localized
 solution exists, this cannot be found for energies above threshold.}
 \begin{figure}[t]
-\includegraphics[scale=0.56]{CO_alpha+D0_vsBoxSize.eps}
-\caption{\label{co_alphaStatic}(Color online) Convergence of the statical polarizability of the $CO$ with respect to the size of the computational domain.}
+\includegraphics[scale=0.68]{CO_statPolvsBox.eps}
+\caption{\label{co_alphaStatic}(Color online) Convergence of the statical polarizability (blue continuous line) and of the ground state permanent dipole (red dotted line) 
+of the $CO$ molecule with respect to the size of the computational domain. The inset plot evidences the relative percentage convergence using the value associated to the largest 
+box as reference.}
 \end{figure}
 
 From the linearized Schroedinger Equation of the perturbed problem, it is easy to see that the fluctuation state at $\omega=0$ can be expressed
@@ -517,7 +520,7 @@ For these ultraviolet regions, convergence might be reached for domains of much 
 which in turn reveal more than sufficient below threshold.
 
 \begin{figure}
-\includegraphics[scale=0.56]{co_spectrum.eps}
+\includegraphics[scale=0.6]{CO_spectrum.eps}
 \caption{\label{co_spectrum}(Color online) Convergence below threshold of the $CO$ spectrum computed in different computational setup.}
 \end{figure}
 
@@ -753,21 +756,48 @@ the associated spectrum exhibit an explicit dependence from the size of the doma
 express the spectral decomposition of the Liouvillian superoperator. 
 
 \begin{figure}[ht]
-\includegraphics[scale=0.24]{CO_exc.eps}
+\includegraphics[scale=0.6]{CO_dos.eps}
 \caption{(Color online) Excitation spectrum of $CO$. The two curves correspond to two computational domain of different sizes. The inset contains the sole contribution of localized excitations.}
 \label{CO_exc}
 \end{figure}
 
-\begin{figure}[ht]
-\includegraphics[scale=0.24]{C6H6_exc.eps}
-\caption{(Color online) Excitation spectrum of $C_6H_6$. The two curves correspond to two computational domain of different sizes. The inset contains the sole contribution of localized excitations.}
-\label{C6H6_exc}
-\end{figure}
+% \begin{figure}[ht]
+% \includegraphics[scale=0.6]{C6H6_dos.eps}
+% \caption{(Color online) Excitation spectrum of $C_6H_6$. The two curves correspond to two computational domain of different sizes. The inset contains the sole contribution of localized excitations.}
+% \label{C6H6_exc}
+% \end{figure}
+% 
+% \begin{figure}[ht]
+% \includegraphics[scale=0.56]{C6H6_excLandscape.eps}
+% \caption{\label{c6h6_excLand}(Color online) Excitation landscape of $C_6H_6$.}
+% \end{figure}
+
+% \begin{figure}[ht]
+% \centering
+% \begin{subfigure}[]{0.2\textwidth}
+% \includegraphics[scale=0.56]{C6H6_excLandscape.eps}
+% %\caption{\label{c6h6_excLand}(Color online) Excitation landscape of $C_6H_6$.}
+% \end{subfigure}
+% \centering
+% \begin{subfigure}[b]{0.2\textwidth}
+% \includegraphics[scale=0.6]{C6H6_dos.eps}
+% \end{subfigure}
+% \caption{(Color online) Excitation spectrum of $C_6H_6$. The two curves correspond to two computational domain of different sizes. The inset contains the sole contribution of localized excitations.}
+% \end{figure}
 
 \begin{figure}[ht]
-\includegraphics[scale=0.56]{c6h6_excitationLandscape.eps}
-\caption{\label{c6h6_excLand}(Color online) Excitation landscape of $C_6H_6$.}
+\centering
+\subfloat[aaaa]
+{\label{c6h6_excLand}
+\includegraphics[scale=0.56]{C6H6_excLandscape.eps}} \\
+\centering
+\subfloat[bbbbb]
+{\label{C6H6_exc}
+\includegraphics[scale=0.6]{C6H6_dos.eps}}
+\caption{(Color online) Excitation landscape and DOS of $C_6H_6$.}
 \end{figure}
+
+
 \section{Criterion of computational reliability for the numerical convergence of the LR}
 
 % From the theoretical analysis of the previous section we can made two statements:
@@ -814,7 +844,7 @@ Show the convergence of the statical polarizability of the $CO$ in function of t
 and add the plot that show the convergence rate of the statical polarizability to the reference (finite difference) value in functions of the number of excitations. The plot evidence that the
 continuum sector of the excitation spectrum is 
 \begin{figure}
-\includegraphics[scale=0.56]{CO_alphaX_isto.eps}
+\includegraphics[scale=0.6]{CO_statPolvsExc.eps}
 \caption{\label{co_AlphaExc}(Color online) Convergence of the statical polarizability of the $CO$ molecule w.r.t the number of excitations.}
 \end{figure}
 
@@ -856,7 +886,7 @@ express the spectral decomposition of the Liouvillian superoperator.
 The Liouvillian superoperator $\Liouv$ for self-consistent systems is expressed as the sum of the unperturbed part plus a coupling term. The left action of these 
 terms reads, respectively
 \be\lb{LiouZeroDef1}
-\Liouvnot \op O = \commutator{\hnot}{O} \;,
+\Liouvnot \op O = \commutator{\hnot}{\op O} \;,
 \ee
 and
 \be\lb{CouplDef1}
