--- a/Analytic_biblio.bib
+++ b/Analytic_biblio.bib
@@ -134,8 +134,7 @@ URL = {https://doi.org/10.1021/acs.jctc.5b00887},
 eprint = {https://doi.org/10.1021/acs.jctc.5b00887}
 }
 
-
-@article{hubener2014,
+@article{giustino2014,
   title = {Time-dependent density functional theory using atomic orbitals and the self-consistent Sternheimer equation},
   author = {H\"ubener, Hannes and Giustino, Feliciano},
   journal = {Phys. Rev. B},
@@ -146,6 +145,21 @@ eprint = {https://doi.org/10.1021/acs.jctc.5b00887}
   year = {2014},
   month = {Feb},
   publisher = {American Physical Society}
+}
+
+@article{giustino2012,
+  title = {Dielectric screening in extended systems using the self-consistent Sternheimer equation and localized basis sets},
+  author = {H\"ubener, Hannes and P\'erez-Osorio, Miguel A. and Ordej\'on, Pablo and Giustino, Feliciano},
+  journal = {Phys. Rev. B},
+  volume = {85},
+  issue = {24},
+  pages = {245125},
+  numpages = {5},
+  year = {2012},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.85.245125},
+  url = {https://link.aps.org/doi/10.1103/PhysRevB.85.245125}
 }
 
 @article{brabec2015,
@@ -163,7 +177,6 @@ issn = "1549-9618",
 publisher = "American Chemical Society",
 number = "11",
 }
-
 
 @article{mahan1980,
   title = {Modified Sternheimer equation for polarizability},
