--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -8,7 +8,7 @@
 \usepackage{subfig}
 \usepackage{amsmath,amsfonts,amssymb,amsthm}
 \usepackage{mathtools,braket}
-\usepackage{tikz}%,pgfplots}
+\usepackage{tikz}
 \usepackage{xifthen}
 %\pgfplotsset{compat=1.15}
 
@@ -88,6 +88,7 @@
 \newcommand{\identity}{\op{\mathbb I}}
 \newcommand{\rmat}[1]{\optr R}
 
+\captionsetup{justification=centerlast}
 
 \begin{document}
 
@@ -793,7 +794,7 @@ express the spectral decomposition of the Liouvillian superoperator.
 \centering
 \subfloat[bbbbb]
 {\label{C6H6_exc}
-\includegraphics[scale=0.6]{C6H6_dos.eps}}
+\includegraphics[scale=0.58]{C6H6_dos.eps}}
 \caption{(Color online) Excitation landscape and DOS of $C_6H_6$.}
 \end{figure}
 
@@ -920,30 +921,6 @@ In the last equivalence we have made usage of the transverse property (see equat
 
 \section{Casida equations}
 
-% We show that Casida equations are equivalent to the operator eigenvalue equations \eqref{ExcitationOperatorsDef1} when an explicit basis $\{\ket{\eta}\}$ for the empty states subspace is used,
-% so that $\op Q_0 = \sum_{\eta}\ketbra{\eta}{\eta}$. Operators $\op O$ satisfying the transverse condition $\op O = \op O_{\perp}$ (see eq. \eqref{RhopTransverseDef1}) can be represented as 
-% follows
-% \be\lb{OperatorTransBasisExpDef1}
-% \op O = \sum_{p\eta}\left(
-% \excite{p}{\eta}\trace{\decay{\eta}{p}\op O} + \decay{\eta}{p}\trace{\excite{p}{\eta}\op O}
-% \right) \;,
-% \ee
-% where the \emph{transition operators} $\excite{p}{\eta} \equiv \ketbra{\eta}{\psi_p}$ and $\decay{\eta}{p} \equiv \ketbra{\psi_p}{\eta}$
-% are normalized as follows
-% \be
-% \trace{\excite{p}{\eta}\excite{q}{\rho}} = \trace{\decay{\eta}{p}\decay{\rho}{q}} = 0 \;, \quad
-% \trace{\excite{p}{\eta}\decay{\rho}{q}} = \delta_{pq}\delta_{\eta\rho} \;. \nonumber
-% \ee
-% Expanding equations \eqref{ExcitationOperatorsDef1} in the basis of transitions provides a matrix equation for the coefficients of the expansion. In particular from the left action equation
-% one has
-% \be
-% \sum_{q\rho}\mat{\trace{\decay{\alpha}{p}\, \sop{\mathcal L}\, \excite{q}{\beta}} &
-% \trace{\decay{\alpha}{p}\, \sop{\mathcal L}\, \decay{\beta}{q}} \\
-% \trace{\excite{p}{\alpha}\, \sop{\mathcal L}\, \excite{q}{\beta}} &
-% \trace{\excite{p}{\alpha}\, \sop{\mathcal L}\, \decay{\beta}{q}}}
-% \mat{X_a^{p\eta} \\ Y_a^{p\eta}} = \Omega_a \mat{X_a^{p\eta} \\ Y_a^{p\eta}}
-% \ee
-
 We show that Casida equations are equivalent to the equations of motion for the excited states \eqref{ExcitationOperatorsDef3}. To this scope we introduce an explicit basis $\{\ket{\eta}\}$
 in the subspace of empty states so that both $\ket{\phi^a_p}$ and $\bra{\chi^a_p}$ can be represented as
 \be
@@ -982,9 +959,29 @@ where
 Finally, exploiting the symmetry properties of both the unperturbed Hamiltonian and of the coupling kernel it follows that $F=G$ and $D=E$ so that equations
 \eqref{ExcitationMatrixEq1} reduce to the usual formulation of the Casida equations in the basis of transitions. 
 
+\section{Computational details}
 
+\subsection{$CO$}
 
+Both GS and LR calculations for the $CO$ molecule are performed in three distinct computational setup that differs for the dimension of the computational
+domain. The molecule is oriented along the $z$ axis and the $z$-dimension of the box is equal to 11.5, 15.1 and 16.6 \AA.
 
+Excitation energies and states are obtained through the explicit diagonalization of the Casida matrix. To this scope we have built a basis in the domain of $\op Q_0$ 
+by calculating the eigenvectors and associated energies of the empty virtual orbitals of $\hnot$. 280 states have been computed in each setup and the corresponding
+energy cutoff in the three simulation box is 30.7, 19.3 and 15.4 eV (energy cutoff decreases as the box increases due to the collapse of the unbound virtual states). 
+
+The DOS reported in figure \ref{CO_exc} are obtained by adding a complex shift of $8\times 10^{-2}$ eV whereas in the inset shift is $5\times 10^{-3}$ eV. 
+
+\subsection{$C_6H_6$}
+
+Both GS and LR calculations for the $C_6H_6$ molecule are performed in three distinct computational setup that differs for the dimension of the computational
+domain. The molecule is oriented in the $xy$ plain and the $x$-dimension of the box is equal to 15.0, 18.2 and 19.7 \AA.
+
+Excitation energies and states are obtained through the explicit diagonalization of the Casida matrix. To this scope we have built a basis in the domain of $\op Q_0$ 
+by calculating the eigenvectors and associated energies of the empty virtual orbitals of $\hnot$. 220 states have been computed in each setup and the corresponding
+energy cutoff in the three simulation box is 16.9, 11.6 and 9.7 eV (energy cutoff decreases as the box increases due to the collapse of the unbound virtual states).  
+
+The DOS reported in figure \ref{C6H6_exc} are obtained by adding a complex shift of $1.3\times 10^{-2}$ eV whereas in the inset shift is $5\times 10^{-3}$ eV. 
 
 
 
